<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <!-- Картинка -->
        <ImageView
            android:id="@+id/scenario_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/gameplay_background"
            android:contentDescription="@string/scenario_image_description" />

        <!-- Название -->
        <TextView
            android:id="@+id/scenario_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scenario_title"
            android:textSize="24sp"
            android:fontFamily="@font/tempogrunge"
            android:paddingTop="5dp"
            android:textColor="@android:color/black"
            android:maxLines="2"
            android:ellipsize="end" />

        <!-- Описание -->
        <TextView
            android:id="@+id/scenario_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scenario_description"
            android:textSize="18sp"
            android:fontFamily="@font/tempogrunge"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="5dp"
            android:maxLines="3"
            android:ellipsize="end" />

        <!-- Сложность -->
        <TextView
            android:id="@+id/scenario_difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scenario_difficulty"
            android:textSize="16sp"
            android:fontFamily="@font/tempogrunge"
            android:textColor="@android:color/holo_green_dark"
            android:layout_marginTop="5dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>